fix: better space usage on mobile

--- a/assets/styles/components/typing-indicator.css
+++ b/assets/styles/components/typing-indicator.css
@@ -114,4 +114,10 @@
             opacity: 1;
         }
     }
+
+    @media (max-width: 767px) {
+        .typing-indicator {
+            display: none !important;
+        }
+    }
 }
